--- a/style.css
+++ b/style.css
@@ -1,57 +1,57 @@
 body {
-    font: 'Raleway', sans-serif;
-    color: rgba(0, 0, 0, 0.5);
-    text-align: center;
-    text-transform: uppercase;
-    letter-spacing: 0.5em;
-    top: 15%;
-    background: linear-gradient(to right, red, yellow);
+  font: "Raleway", sans-serif;
+  color: rgba(0, 0, 0, 0.5);
+  text-align: center;
+  text-transform: uppercase;
+  letter-spacing: 0.5em;
+  top: 15%;
+  background: linear-gradient(to right, rgb(217, 132, 227), rgb(37, 205, 130));
 }
 
 h1 {
-    font: 600 3.5em 'Raleway', sans-serif;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: rgba(0, 0, 0, 0.5);
-    text-align: center;
-    text-transform: uppercase;
-    letter-spacing: 0.5em;
-    width: 100%;
+  font: 600 3.5em "Raleway", sans-serif;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: rgba(0, 0, 0, 0.5);
+  text-align: center;
+  text-transform: uppercase;
+  letter-spacing: 0.5em;
+  width: 100%;
 }
 
 #random {
-    font: 900 1em 'Raleway', sans-serif;
-    color: rgba(0, 0, 0, 0.5);
-    text-align: center;
-    text-transform: none;
-    letter-spacing: 0.01em;
-    opacity: 80%;
-    margin-top: 0.5em;
+  font: 900 1em "Raleway", sans-serif;
+  color: rgba(0, 0, 0, 0.5);
+  text-align: center;
+  text-transform: none;
+  letter-spacing: 0.01em;
+  opacity: 80%;
+  margin-top: 0.5em;
 }
 
 h3 {
-    font: 900 1em 'Raleway', sans-serif;
-    color: rgba(0, 0, 0, 0.5);
-    text-align: center;
-    text-transform: none;
-    letter-spacing: 0.01em;
+  font: 900 1em "Raleway", sans-serif;
+  color: rgba(0, 0, 0, 0.5);
+  text-align: center;
+  text-transform: none;
+  letter-spacing: 0.01em;
 }
 
-@media only screen and (max-width:600px) {
-    h1 {
-        /* font-size: auto; */
-        letter-spacing: 0;
-        /* padding: 0; */
-    }
-    h2 {
-        /* font-size: auto; */
-        letter-spacing: 0;
-        /* padding: 0; */
-    }
-    h3 {
-        /* font-size: auto; */
-        letter-spacing: 0;
-        /* padding: 0; */
-    }
+@media only screen and (max-width: 600px) {
+  h1 {
+    /* font-size: auto; */
+    letter-spacing: 0;
+    /* padding: 0; */
+  }
+  h2 {
+    /* font-size: auto; */
+    letter-spacing: 0;
+    /* padding: 0; */
+  }
+  h3 {
+    /* font-size: auto; */
+    letter-spacing: 0;
+    /* padding: 0; */
+  }
 }
