--- a/style.css
+++ b/style.css
@@ -4,12 +4,13 @@ body {
   text-align: center;
   text-transform: uppercase;
   letter-spacing: 0.5em;
-  top: 15%;
+  /* top: 15%; */
   background: linear-gradient(to right, rgb(217, 132, 227), rgb(37, 205, 130));
 }
 
 h1 {
   font: 600 3.5em "Raleway", sans-serif;
+  margin-top: 38dvh;
   display: flex;
   justify-content: center;
   align-items: center;
